# flowerpower

./: .bash_profile  .gitignore  CMakeLists.txt  fp_github.asc  struct.h
c-s/: .CMakeLists.txt.swp  .FP_S_to_DB.cpp.swp  .FP_c.cpp.swp  .FP_s.cpp.swp  .database.cpp.swp  CMakeLists.txt  CMakeLists.txt~  FP_2c.cpp  FP_c.cpp  FP_s.cpp  database.cpp  database.cpp~  database.c~  thread-ex
c-s/build_arm/: CMakeCache.txt  FP_2c  Makefile  cmake_install.cmake  main_c  main_s
c-s/include/: interface.h
c-s/src/: zeromq.cmake  zeromq.cmake~
data/: .Makefile.swp  .controller.cpp.swp  Makefile  controller  controller.c  controller.cpp  controller.h
db/: .database.cpp.swp  .main_c.cpp.swp  Makefile  database  database.c  database.cpp  main  main.cpp  main_c.cpp  main_s  main_s.cpp
final/: controller.cpp  database.cpp  main_c.cpp  main_s.cpp  server.cpp  useful.cpp
final/arduino/: arduino_daten_Uebertragen.ino  arduino_helligkeit___Temperatur.ino  dht.h  dht22_test.ino
final/arduino/arduino_gpio/: controller.ino
final/arduino/arduino_usb/: controller.ino
final/header/: controller.h  network.h  useful.h  var_client.h
final/src/: zeromq.cmake
flowerpower-clone/: .gitignore  client.cpp  network.cpp
flowerpower-clone/header/: database.h  struct.h  var_server.h
flowerpower-clone/src/: helloworld.c
old/c-s/: FP_DB_to_C.cpp  FP_S_to_DB.cpp  FP_s.cpp  thread-ex.c
old/c-s/build_arm/: main_s
old/c-s/src/: zeromq.platform.hpp.cmake.in
old/data/: controller.cpp
old/db/: Makefile  main_c.cpp
old/visu/: genData.php  index.php  js.php
old/visu/js/: chart.js  timestamp.js
old/visu/php/: get.php  jsonChartItem.php
visu/: header.php  index.php  js.php
visu/js/: chart.js  chart.js.bak
visu/php/: database.php  get.php  inc_autoload.php  inc_database.php  jsonChart.php  jsonHwId.php
